修复多版本适配缺陷，支持下限调整为 1.16.5
- 1.21 数据包目录单数化 advancements→advancement：>=1.21 于 processResources 重定位（此前 1.21.x 进度不注册）
- buildAndCollect 中 property("mod_version") 在 Copy 任务作用域解析失败，提升至 project 作用域（此前阻断整个 chiseledBuild）
- StatusEffect onApplied/onRemoved 签名边界修正为 1.20.2（非 1.20.5），修复 1.20.4 编译
- ModAdvancements 统一 Stonecutter else 为区块形式，修复 >=1.20.2 预处理
- LifeDebtConfig：<1.17 改用 Log4j2（无 SLF4J），Files.readString→readAllBytes（Java 8 兼容），修复 1.16.5
- fabric.mod.json：fabric-api 依赖 id 按版本注入（<1.18 为 fabric，否则 fabric-api），修复 1.16.5/1.17.1 加载被拒
- 移除 1.14.4 目标（深层 1.14 API 差异，从未编译通过）；README/CI/build 下限改为 1.16.5

验证：11 版本 chiseledBuild 全部成功产出 jar；1.16.5/1.20.4/1.21.8 headless 服务器均启动至 Done，mixin 全部套用。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>